k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-tracker
  labels:
    name: health-tracker
